  - Fixed an improper check in the on actions when declaring war to properly setup the Iraq War
  - Fixed several events in Singapore not being localized or functioning as correct due to typoes in the variant names
  - Fixed being able to do the Internal Investments for Local Conservation Efforts in any state as Brazil even though it should've been limited to the Amazon states

 Content:
  - [BUL] Enhanced "Embracing Orthodoxy" focus to add Anti-LGBTQ Stance national spirit (Issue #284)
  - [BUL] Added nationalist drift bonus to Orthodox National Values national spirit
  - [BUL] Added Dobruja (state 284) to The Fourth Bulgarian Kingdom integration decisions
  - The Generic focus "Military Education Reform" now gives a +1 skill level to all generals while also increasing your education law for unit leaders
  - The Generic tree will now actually give doctrinal benefits and are now updated to the newest system for doctrines
  - The Vatican can join the European Union as a nation with no elections (only circumstance for this)
  - Added the ability to to "Energy Load Share" with a select nation
    - Note: If you are receiving energy load sharing you will only be able to have one nation sharing to you for now (is subject to change prior to full release)
  - New Content for North Korea and Balances Related with the New DLC
  - New Even for North Korea Related to Submarine Engines
  - Added a new raid for the United States to capture Nicolás Maduro
  - Created unique replacement ideas for each country and updated all 4 focus references (USA_chrisitian_influence)
  - Introduced priority to the Chinese decisions so custom content is closer to the top of the decisions panel
  - Introduced priority to the GCC decisions and other unique and custom mechanics
  - Added "Understrength" battalions, to allow more flexibility with division design, and to enable unified designer to work properly
  - Added Synthetic Refineries as buildable buildings