@@ -3078,19 +3078,19 @@
  HBL_AUTH_SS_fascism_ADJ: "Benelux"
  HBL_AUTH_SS_fascism_DEF: "the Benelux Federation"
 
- #United States of North America
- USNA_democratic: "United States of North America"
+ #North American Federation
+ USNA_democratic: "North American Federation"
  USNA_democratic_ADJ: "North American"
- USNA_democratic_DEF: "the United States of North America"
- USNA_communism: "United States of North America"
+ USNA_democratic_DEF: "the North American Federation"
+ USNA_communism: "North American Federation"
  USNA_communism_ADJ: "North American"
- USNA_communism_DEF: "the United States of North America"
- USNA_neutrality: "United States of North America"
+ USNA_communism_DEF: "the North American Federation"
+ USNA_neutrality: "North American Federation"
  USNA_neutrality_ADJ: "North American"
- USNA_neutrality_DEF: "the United States of North America"
- USNA_nationalist: "United States of North America"
+ USNA_neutrality_DEF: "the North American Federation"
+ USNA_nationalist: "North American Federation"
  USNA_nationalist_ADJ: "North American"
- USNA_nationalist_DEF: "the United States of North America"
+ USNA_nationalist_DEF: "the North American Federation"
  USNA_fascism: "North American Caliphate"
  USNA_fascism_ADJ: "North American"
  USNA_fascism_DEF: "the North American Caliphate"
