@@ -163,12 +163,12 @@
  HBL_update_flag_desc: "$update_flag_and_name_desc$"
  is_HBL: "Has formed the Benelux"
 
- #United States of North America
+ #North American Federation
  form_USNA_category: "Unite North America"
  form_USNA_category_desc: "The North American continent has historically repelled foreign influence since Mexico, the United States, and Canada were founded as nation-states. They form the backbone of the world's economy, with a collective eleven trillion GDP at the beginning of the new millennia. Uniting the nations and setting our sights on the grander tomorrow will see us go forward to the future."
 
- USNA_integrate_start: "Begin Forming United States of North America"
- USNA_integrate_start_desc: "It is time to begin forming the United States of North America."
+ USNA_integrate_start: "Begin Forming North American Federation"
+ USNA_integrate_start_desc: "It is time to begin forming the North American Federation."
  USNA_integrate_CAN: "Integrate Canada"
  USNA_integrate_CAN_desc: "Canada is the largest nation by land area within the new union and has many untapped oil reserves. These two facts alone make Canada an integral piece of the new Union of North America puzzle. Hopefully, the apologetics get minimized as they're further integrated into the new nation."
  USNA_integrate_USA: "Integrate USA"
@@ -178,7 +178,7 @@
 
  USNA_update_flag: "$update_flag_and_name$"
  USNA_update_flag_desc: "$update_flag_and_name_desc$"
- is_USNA: "Has formed the United States of North America"
+ is_USNA: "Has formed the North American Federation"
 
  #United Turkic States
  form_UTS_category: "Unite Turkic Territories"
