@@ -156,6 +156,7 @@ v1.12.4
   - Fixed being able to do the Internal Investments for Local Conservation Efforts in any state as Brazil even though it should've been limited to the Amazon states
 
  Content:
+  - [GENERIC] Renamed North American formable from "United States of North America" to "North American Federation" (Issue #268)
   - [BUL] Enhanced "Embracing Orthodoxy" focus to add Anti-LGBTQ Stance national spirit (Issue #284)
   - [BUL] Added nationalist drift bonus to Orthodox National Values national spirit
   - [BUL] Added Dobruja (state 284) to The Fourth Bulgarian Kingdom integration decisions
